change service,fix logic